fixing compilation with SOFA_DUMP_VISITOR_INFO (adding a gui to analyse performance accessible in the "stats" tab) and adding the corresponding cmake option SOFA-MISC_DUMP_VISITOR_INFO
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10693 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/sofa/gui/qt/CMakeLists.txt
+++ b/Sofa/applications/sofa/gui/qt/CMakeLists.txt
@@ -80,10 +80,9 @@ set(UI_FILES
 	VideoRecorderManager.ui
 	)
 
-if(SOFA_DUMP_VISITOR_INFO)
+if(SOFA-MISC_DUMP_VISITOR_INFO)
 	list(APPEND HEADER_FILES
-	
-		 GraphVisitor.h
+
 		 WindowVisitor.h
 		 QVisitorControlPanel.h
 		 PieWidget.h
@@ -143,6 +142,10 @@ list(APPEND HEADER_FILES
 	ImageQt.h
 	QModelViewTableDataContainer.h
 	)
+
+if(SOFA-MISC_DUMP_VISITOR_INFO)
+    list(APPEND HEADER_FILES  GraphVisitor.h  )
+endif()
 
 set(MOC_FILES_GROUP "Generated")
 set(FORM_FILES_GROUP "Generated")
