Comment or mark as advanced gtest's CMake options
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10702 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/extlibs/gtest/CMakeLists.txt
+++ b/Sofa/extlibs/gtest/CMakeLists.txt
@@ -15,12 +15,14 @@ option(
   gtest_force_shared_crt
   "Use shared (DLL) run-time lib even when Google Test is built as static lib."
   OFF)
+mark_as_advanced(gtest_force_shared_crt)
 
-option(gtest_build_tests "Build all of gtest's own tests." OFF)
+# option(gtest_build_tests "Build all of gtest's own tests." OFF)
 
-option(gtest_build_samples "Build gtest's sample programs." OFF)
+# option(gtest_build_samples "Build gtest's sample programs." OFF)
 
 option(gtest_disable_pthreads "Disable uses of pthreads in gtest." OFF)
+mark_as_advanced(gtest_disable_pthreads)
 
 # Defines pre_project_set_up_hermetic_build() and set_up_hermetic_build().
 include(cmake/hermetic_build.cmake OPTIONAL)
