--- a/Sofa/modules/sofa/component/SofaPardisoSolver/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaPardisoSolver/CMakeLists.txt
@@ -17,5 +17,6 @@ add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
 AddCompilerDefinitions("SOFA_BUILD_PARDISO_SOLVER")
 AddLinkerDependencies(SofaSimulationTree SofaMeshCollision SofaBaseVisual)
+AddLinkerDependencies(pardiso500-GNU461-X86-64 gfortran blas lapack gomp)
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
