ADD : -support for Bezier Tetrahedron in MeshMatrixMass -functions in BezierTetrahedronSetGeometryAlgorithms to compute the Jacobian and to test if a tetrahedron is affine - functions in CommonAlgorithms.h to compute multinomial and binomial coefficients - functions in BezierTetrahedronSetTopologyContainer to get Bezier Tetrahedron Index for all degree UPDATE : -  integration points for tetrahedra in BezierTetrahedronSetGeometryAlgorithms up to degree 8 - example BezierTetrahedronTopologicalMapping.scn with mass/MeshMatrixMass.h FIX : removed useless include in EdgeSetGeometryAlgorithms
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10719 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaBaseTopology/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaBaseTopology/CMakeLists.txt
@@ -20,6 +20,8 @@ set(HEADER_FILES
     ../topology/HexahedronSetTopologyAlgorithms.inl 
     ../topology/HexahedronSetTopologyContainer.h 
     ../topology/HexahedronSetTopologyModifier.h 
+	../topology/NumericalIntegrationDescriptor.h 
+	../topology/NumericalIntegrationDescriptor.inl 
     ../topology/MeshTopology.h 
     ../topology/PointSetGeometryAlgorithms.h 
     ../topology/PointSetGeometryAlgorithms.inl 
@@ -82,7 +84,8 @@ set(SOURCE_FILES
     ../topology/HexahedronSetTopologyAlgorithms.cpp 
     ../topology/HexahedronSetTopologyContainer.cpp 
     ../topology/HexahedronSetTopologyModifier.cpp 
-    ../topology/MeshTopology.cpp 
+    ../topology/MeshTopology.cpp
+	../topology/NumericalIntegrationDescriptor.cpp  
     ../topology/PointSetGeometryAlgorithms.cpp 
     ../topology/PointSetTopologyAlgorithms.cpp 
     ../topology/PointSetTopologyContainer.cpp 
