ADD : Rigid capsule model and collision computation factorisation
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10723 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaMeshCollision/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaMeshCollision/CMakeLists.txt
@@ -35,6 +35,7 @@ set(HEADER_FILES
     ../collision/TriangleLocalMinDistanceFilter.h
     ../collision/LocalMinDistanceFilter.h
     ../collision/MeshIntTool.h
+    ../collision/MeshIntTool.inl
     ../collision/IntrTriangleOBB.h
     ../collision/IntrTriangleOBB.inl
     ../collision/IntrMeshUtility.h
