Compliant: fixed compliation on clang/osx-10.9
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10739 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -31,6 +31,7 @@ set(HEADER_FILES
     numericalsolver/LDLTResponse.h
     numericalsolver/DiagonalResponse.h
     numericalsolver/SequentialSolver.h
+	numericalsolver/IterativeSolver.h
 
     preconditioner/BasePreconditioner.h
     preconditioner/LDLTPreconditioner.h
@@ -119,6 +120,7 @@ set(SOURCE_FILES
     numericalsolver/LDLTResponse.cpp
     numericalsolver/DiagonalResponse.cpp
     numericalsolver/SequentialSolver.cpp
+	numericalsolver/IterativeSolver.cpp
 
     preconditioner/LDLTPreconditioner.cpp
     #preconditioner/IncompleteCholeskyPreconditioner.cpp
@@ -179,13 +181,22 @@ AddLinkerDependencies(SofaEigen2Solver SofaUserInteraction SofaComponentMisc Sof
 AddCompilerDefinitions("BOOST_CHRONO_HEADER_ONLY")
 
 
-if(LINUX OR UNIX) # what about apple?
+if(LINUX OR UNIX AND NOT APPLE) # what about apple?
     AddLinkerDependencies( rt ) # clock_gettime
 endif()
 
 # I do not understand why it is necessary but otherwise it does not link on debug mode on linux
 # is it necessary on windows and apple?
+
+# on apple you need to flag 'system' explicitely otherwise
+# ${Boost_SYSTEM_LIBRARY} is empty 
+# see http://stackoverflow.com/questions/1065672/how-to-link-against-boost-system-with-cmake/1065729#1065729
+if( APPLE )
+	find_package(Boost COMPONENTS system REQUIRED)
+endif()
+
 AddLinkerDependencies( ${Boost_SYSTEM_LIBRARY} )
-	
+
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
 include(custom.cmake OPTIONAL)
+
