Compliant: added (simple) benchmarking tools, see examples/benchmark.py
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10740 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -32,6 +32,7 @@ set(HEADER_FILES
     numericalsolver/DiagonalResponse.h
     numericalsolver/SequentialSolver.h
 	numericalsolver/IterativeSolver.h
+	numericalsolver/Benchmark.h
 
     preconditioner/BasePreconditioner.h
     preconditioner/LDLTPreconditioner.h
@@ -121,6 +122,7 @@ set(SOURCE_FILES
     numericalsolver/DiagonalResponse.cpp
     numericalsolver/SequentialSolver.cpp
 	numericalsolver/IterativeSolver.cpp
+	numericalsolver/Benchmark.cpp
 
     preconditioner/LDLTPreconditioner.cpp
     #preconditioner/IncompleteCholeskyPreconditioner.cpp
