ADD: we can now set animation speed in the SkeletalMotionConstraint because animation time is not simulation time ADD: SkeletalMotionConstraint::projectMatrix has been implemented ADD: SofaPython can now be used in debug mode on Windows (but the users have to build Python in debug them selves) ADD: Flexible - BaseDeformationMapping can now be used without ShapeFunction, just by filling up its data (indices / weights) ADD: ColladaSceneLoader can now use Flexible LinearMapping instead of SkinningMapping if Flexible plugin has been enabled
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10744 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/ColladaSceneLoader/CMakeLists.txt
+++ b/Sofa/applications/plugins/ColladaSceneLoader/CMakeLists.txt
@@ -53,4 +53,8 @@ add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${README_FILE
 AddCompilerDefinitions("SOFA_BUILD_COLLADASCENELOADER")
 AddLinkerDependencies(SofaLoader SofaSimulationCommon SofaBaseMechanics SofaRigid SofaBoundaryCondition SofaBaseTopology SofaBaseVisual SofaOpenglVisual SofaDeformable SofaMeshCollision ${ASSIMP_LIBRARY})
 
+if(SOFA-PLUGIN_FLEXIBLE)
+	AddLinkerDependencies(Flexible)
+endif()
+
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
