Compliant: added BenchmarkSolver to bench multiple solvers at once, update benchmark.py (needs compliantdev)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10748 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -33,6 +33,7 @@ set(HEADER_FILES
     numericalsolver/SequentialSolver.h
 	numericalsolver/IterativeSolver.h
 	numericalsolver/Benchmark.h
+	numericalsolver/BenchmarkSolver.h
 
     preconditioner/BasePreconditioner.h
     preconditioner/LDLTPreconditioner.h
@@ -123,6 +124,7 @@ set(SOURCE_FILES
     numericalsolver/SequentialSolver.cpp
 	numericalsolver/IterativeSolver.cpp
 	numericalsolver/Benchmark.cpp
+	numericalsolver/BenchmarkSolver.cpp
 
     preconditioner/LDLTPreconditioner.cpp
     #preconditioner/IncompleteCholeskyPreconditioner.cpp
