Compliant: fixed compilation/warnings
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10763 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -189,10 +189,13 @@ endif()
 # the link with boost-system is only necessary for debug compilation (at least on linux)
 # that means you need an installed version of boost to compile Compliant in debug, boring...
 # I loved the header-only boost
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+
+# it is always necessary on osx/clang
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR APPLE)
     find_package(Boost COMPONENTS system REQUIRED)
     AddLinkerDependencies( ${Boost_SYSTEM_LIBRARY} )
 endif()
+
 
 
 
