Compliant: is now requiring to link with precompiled boost libraries >= 1.48. This is due to the need for boost::chrono. Another solution could be to compile with c++11 and to use std::chrono instead...
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10767 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -182,17 +182,27 @@ AddLinkerDependencies(SofaEigen2Solver SofaUserInteraction SofaComponentMisc Sof
 
 
 
+
+
+
+
+#### BOOST ######
+
+# linking with boost-system is needed
+# that means an installed version of boost is mandatory (sadly)
+# I loved the header-only boost
+if(NOT SOFA-EXTERNAL_BOOST)
+    message(FATAL_ERROR "Compliant plugin needs a compiled Boost library >= 1.48. Please modify the SOFA-EXTERNAL_BOOST_PATH option to fix it...")
+endif()
+
+find_package(Boost COMPONENTS system REQUIRED)
+AddLinkerDependencies( ${Boost_SYSTEM_LIBRARY} )
+
 if(LINUX OR UNIX AND NOT APPLE)
     AddLinkerDependencies( rt ) # clock_gettime
 endif()
 
-# the link with boost-system is only necessary for debug compilation (at least on linux)
-# that means you need an installed version of boost to compile Compliant in debug, boring...
-# I loved the header-only boost
-#if(CMAKE_BUILD_TYPE STREQUAL "Debug")   #FF: this seems to be always required now
-    find_package(Boost COMPONENTS system REQUIRED)
-    AddLinkerDependencies( ${Boost_SYSTEM_LIBRARY} )
-#endif()
+
 
 
 
