FIX: PluginExample compilation on Windows (and maybe runtime for Linux)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10769 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/PluginExample/CMakeLists.txt
+++ b/Sofa/applications/plugins/PluginExample/CMakeLists.txt
@@ -2,13 +2,7 @@ include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
 set(HEADER_FILES
 
-    MyBehaviorModel.h 
     MyDataWidgetUnsigned.h 
-    MyMappingPendulumInPlane.h 
-    MyMappingPendulumInPlane.inl 
-    MyProjectiveConstraintSet.h 
-    MyProjectiveConstraintSet.inl 
-	initPlugin.h
 
 	)
 
@@ -25,8 +19,29 @@ set(SOURCE_FILES
 set(README_FILES
 
 	PluginExample.txt
+
 	)
-	
+
+UseQt()
+
+SOFA_QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES})
+
+# make mocced header files path from absolute to relative
+ToRelativePath(MOC_FILES "${CMAKE_CURRENT_SOURCE_DIR}" "${MOC_FILES}")
+
+# these header files do not need MOCcing
+list(APPEND HEADER_FILES
+
+	MyBehaviorModel.h 
+    MyMappingPendulumInPlane.h 
+    MyMappingPendulumInPlane.inl 
+    MyProjectiveConstraintSet.h 
+    MyProjectiveConstraintSet.inl 
+	initPlugin.h
+
+	)
+
+set(MOC_FILES_GROUP "Generated")
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${MOC_FILES} ${SOURCE_FILES} ${README_FILES})
 
