push ed753f7..089ba13
* commit 089ba1317797d8966826e1984ee7ec892ce015f4
Add -fPIC to compile static libs with clang

   8 files changed, 25 insertions(+), 14 deletions(-)



git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10816 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/extlibs/PML/CMakeLists.txt
+++ b/Sofa/extlibs/PML/CMakeLists.txt
@@ -8,7 +8,9 @@ add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 find_package(LibXml2 REQUIRED)
 include_directories("${LIBXML2_INCLUDE_DIR}" "PhysicalProperties/")
 
-if(${CMAKE_COMPILER_IS_GNUCC})
+# The code must be relocatable if we want to link a shared library against it
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
+        OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     AddCompilerFlags("-fPIC")
 endif()
 
