--- a/Sofa/extlibs/LML/CMakeLists.txt
+++ b/Sofa/extlibs/LML/CMakeLists.txt
@@ -3,7 +3,9 @@ include(${SOFA_CMAKE_DIR}/preProject.cmake)
 find_package(LibXml2 REQUIRED)
 include_directories("${LIBXML2_INCLUDE_DIR}")
 
-if(${CMAKE_COMPILER_IS_GNUCC})
+# The code must be relocatable if we want to link a shared library against it
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
+        OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     AddCompilerFlags("-fPIC")
 endif()
 
