ADD : GenerateCylinder class which generates a tetrahedral mesh of a cylinder whose radius, height and number of vertices can be controlled
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10836 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaEngine/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaEngine/CMakeLists.txt
@@ -14,7 +14,9 @@ set(HEADER_FILES
     ../engine/SphereROI.h 
     ../engine/SphereROI.inl 
     ../engine/DilateEngine.h 
-    ../engine/DilateEngine.inl 
+    ../engine/DilateEngine.inl
+    ../engine/GenerateCylinder.h 
+    ../engine/GenerateCylinder.inl  
     ../engine/ExtrudeSurface.h 
     ../engine/ExtrudeSurface.inl 
     ../engine/ExtrudeQuadsAndGenerateHexas.h 
@@ -93,6 +95,7 @@ set(SOURCE_FILES
     ../engine/PlaneROI.cpp 
     ../engine/SphereROI.cpp 
     ../engine/DilateEngine.cpp 
+    ../engine/GenerateCylinder.cpp 
     ../engine/ExtrudeSurface.cpp 
     ../engine/ExtrudeQuadsAndGenerateHexas.cpp 
     ../engine/ExtrudeEdgesAndGenerateQuads.cpp 
