ADD : test for Bezier Tetrahedron topology in BezierTetrahedronTopology_test ADD : test for numerical integration in tetrahedra ADD : traction test for linear elastic material in LinearElasticity_test.cpp ADD : example for GenerateCylinder
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10854 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -1,7 +1,9 @@
 include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
 set(SOURCE_FILES
-
+    LinearElasticity_test.cpp
+	BezierTetrahedronTopology_test.cpp
+	TetrahedronNumericalIntegration_test.cpp
     PrimitiveCreation.cpp
     RigidMapping_test.cpp
     EulerImplicit_test.cpp
@@ -27,7 +29,7 @@ endif()
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${RC_FILES})
 AddCompilerDefinitions("SOFA_PROJECT_TEST")
-
+AddCompilerDefinitions("SOFA_TEST_SCENES_PATH=${CMAKE_CURRENT_SOURCE_DIR}")
 AddLinkerDependencies(
     SofaTest
     SofaComponentMain
