ADD: Laplacian smoothing
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10877 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaEngine/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaEngine/CMakeLists.txt
@@ -59,6 +59,8 @@ set(HEADER_FILES
     ../engine/MapIndices.inl 
     ../engine/RandomPointDistributionInSurface.h 
     ../engine/RandomPointDistributionInSurface.inl 
+    ../engine/SmoothMeshEngine.h
+    ../engine/SmoothMeshEngine.inl
     ../engine/Spiral.h 
     ../engine/Spiral.inl 
     ../engine/Vertex2Frame.h 
@@ -117,6 +119,7 @@ set(SOURCE_FILES
     ../engine/JoinPoints.cpp 
     ../engine/MapIndices.cpp 
     ../engine/RandomPointDistributionInSurface.cpp 
+    ../engine/SmoothMeshEngine.cpp
     ../engine/Spiral.cpp 
     ../engine/Vertex2Frame.cpp 
     ../engine/TextureInterpolation.cpp 
