--- a/Sofa/extlibs/metis-5.1.0/CMakeLists.txt
+++ b/Sofa/extlibs/metis-5.1.0/CMakeLists.txt
@@ -1,16 +1,22 @@
 include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
+set(METIS_INSTALL FALSE)
+set(METIS_LIBRARY_TYPE STATIC)
+
+unset(GKLIB_PATH CACHE)
+get_filename_component(GKLIB_PATH "GKlib" ABSOLUTE)
+include(GKlib/GKlibSystem.cmake)
+
 include_directories(GKlib)
 include_directories(include)
 include_directories(libmetis)
 
 file(GLOB metis_sources libmetis/*.c)
-file(GLOB GKlib_sources GKlib/*.c)
 
 add_library(${PROJECT_NAME} STATIC ${metis_sources} ${GKlib_sources})
 
 if(UNIX)
-    target_link_libraries(metis m)
+    target_link_libraries(${PROJECT_NAME} m)
 endif()
 
 # The code must be relocatable if we want to link a shared library against it
