--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SOURCE_FILES
     Matrix_test.cpp
     OBBTest.cpp
     SphereTest.cpp
-    Patch_test.cpp
+    AffinePatch_test.cpp
     ProjectToPlaneConstraint_test.cpp
     ProjectToLineConstraint_test.cpp
     BaryMapperTest.cpp
