--- a/Sofa/modules/sofa/component/SofaValidation/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaValidation/CMakeLists.txt
@@ -45,6 +45,6 @@ set(GROUP_BASE_DIR "..")
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
 AddCompilerDefinitions("SOFA_BUILD_VALIDATION" )
-AddLinkerDependencies(SofaBaseCollision SofaLoader SofaMeshCollision )
-        
+AddLinkerDependencies(${ZLIB_LIBRARIES_OPTIONAL} SofaBaseCollision SofaLoader SofaMeshCollision )
+
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
