Work in progress on customGUI
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10922 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/projects/customGUI/CMakeLists.txt
+++ b/Sofa/applications/projects/customGUI/CMakeLists.txt
@@ -1,10 +1,12 @@
 include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
 set(SOURCE_FILES
-
     customGUI.cpp
-
-    )
+#    SimpleScene.cpp
+)
+set(HEADER_FILES
+ #   SimpleScene.h
+)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
