WIP on custom gui
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10933 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/projects/customGUI/CMakeLists.txt
+++ b/Sofa/applications/projects/customGUI/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 AddLinkerDependencies(SofaSimulationTree SofaComponentMain SofaGuiMain)
 AddLinkerDependencies(SofaSimulationGraph)
+AddLinkerDependencies(Compliant)
 
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
