Plugin Image: update CMake for imagetoolbox
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10934 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/image/image_gui/CMakeLists.txt
+++ b/Sofa/applications/plugins/image/image_gui/CMakeLists.txt
@@ -14,18 +14,9 @@ set(HEADER_FILES
 #	QImageMouseButtonsWidget.h 
 	VectorVisualizationWidget.h 
 
-#     ../imagetoolbox/imagetoolboxbasicactionwidget.h
-#     ../imagetoolbox/imagetoolboxcentralwidget.h
-#     ../imagetoolbox/imagetoolboxlabelactionwidget.h
-#     ../imagetoolbox/imagetoolboxwidget.h
-#     ../imagetoolbox/labelimagetoolboxaction.h
-#     ../imagetoolbox/labelpoint/labelpointimagetoolboxaction.h
-#     ../imagetoolbox/contour/contourimagetoolboxaction.h
-#     ../imagetoolbox/contour/contourimagetoolbox.h
-	)
+        )
 
-UseQt()
-SOFA_QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES})
+
 
 
 
@@ -43,17 +34,6 @@ set(SOURCE_FILES
 #	QImageMouseButtonsWidget.cpp 
     VectorVisualizationWidget.cpp 
 
-# #    ../imagetoolbox/cursorinfoimagetoolbox.cpp
-#     ../imagetoolbox/imagetoolbox.cpp
-#     ../imagetoolbox/imagetoolboxwidget.cpp
-#     ../imagetoolbox/labelimagetoolboxaction.cpp
-#     ../imagetoolbox/labelimagetoolbox.cpp
-#     ../imagetoolbox/contour/contourimagetoolboxaction.cpp
-#     ../imagetoolbox/contour/contourimagetoolbox.cpp
-#     ../imagetoolbox/labelpoint/labelpointimagetoolboxaction.cpp
-#     ../imagetoolbox/labelpoint/labelpointimagetoolbox.cpp
-
-
 	)
 
 
@@ -62,11 +42,12 @@ list(APPEND HEADER_FILES
 	initImage_gui.h
 	ImageTransformWidget.h 
 
-# #    ../imagetoolbox/cursorinfoimagetoolbox.h
-#     ../imagetoolbox/imagetoolboxdata.h
-#     ../imagetoolbox/labelimagetoolbox.h
-#     ../imagetoolbox/labelpoint/labelpointimagetoolbox.h
-	)
+        )
+
+include(../imagetoolbox/imagetoolbox.cmake)
+
+UseQt()
+SOFA_QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES})
 
 # make mocced header / form files path from absolute to relative
 ToRelativePath(MOC_FILES "${CMAKE_CURRENT_SOURCE_DIR}" "${MOC_FILES}")
