Compliant: - adding python files in CMakeLists so they appear in the IDE project. - compiling DampingCompliance for Vec1 dofs.
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10971 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -155,6 +155,9 @@ set(README_FILES
 	Compliant.txt
 	)
 
+# include python files
+include(./python/python.cmake)	
+	
 #if(WIN32)
 #	include_directories("${SOFA_EXTLIBS_DIR}/SuiteSparse/cholmod/Include")
 #	link_directories("${SOFA_EXTLIBS_DIR}/SuiteSparse/cholmod/Lib")
@@ -162,7 +165,7 @@ set(README_FILES
 #	include_directories("/usr/include/suitesparse/")
 #endif()
 	
-add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${README_FILES})
+add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${README_FILES} ${PYTHON_FILES})
 
 AddCompilerDefinitions("SOFA_BUILD_Compliant")
 AddLinkerDependencies(SofaEigen2Solver SofaUserInteraction SofaComponentMisc SofaHelper SofaSimulationGraph)
