--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCE_FILES
     LoadScene_test.cpp
     TeschnerSpatialHashing_test.cpp
     DAG_test.cpp
+    BroadPhaseTest.cpp
         )
 
 if(APPLE)
