Refactored the simplified sofa gui.
Picking returns a PickedPoint, based on which an Interactor can be created.
Todo: demonstrate several interactors of different types simultaneously in a simulation.

git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10986 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/projects/customGUI/CMakeLists.txt
+++ b/Sofa/applications/projects/customGUI/CMakeLists.txt
@@ -2,14 +2,15 @@ include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
 set(SOURCE_FILES
     customGUI.cpp
-    Anchor.cpp
-    DragAnchor.cpp
-    GlPickedPoint.cpp
+    Interactor.cpp
+    SpringInteractor.cpp
+    SofaGlInterface.cpp
 )
 set(HEADER_FILES
-    Anchor.h
-    DragAnchor.h
-    GlPickedPoint.h
+    Interactor.h
+    SpringInteractor.h
+    PickedPoint.h
+    SofaGlInterface.h
 )
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
