new component: display a frame a the corner of the scene view
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10987 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaOpenglVisual/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaOpenglVisual/CMakeLists.txt
@@ -15,6 +15,7 @@ set(HEADER_FILES
     ../visualmodel/DataDisplay.h
     ../visualmodel/OglLabel.h
     ../visualmodel/OglCylinderModel.h
+    ../visualmodel/OglSceneFrame.h
 
     )
     
@@ -33,6 +34,7 @@ set(SOURCE_FILES
     ../visualmodel/DataDisplay.cpp
     ../visualmodel/OglLabel.cpp
     ../visualmodel/OglCylinderModel.cpp
+    ../visualmodel/OglSceneFrame.cpp
 
     )
     
