new component OglGrid: display a simple grid (the component of the previous commit is OglSceneFrame)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10988 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaOpenglVisual/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaOpenglVisual/CMakeLists.txt
@@ -16,6 +16,7 @@ set(HEADER_FILES
     ../visualmodel/OglLabel.h
     ../visualmodel/OglCylinderModel.h
     ../visualmodel/OglSceneFrame.h
+    ../visualmodel/OglGrid.h
 
     )
     
@@ -35,6 +36,7 @@ set(SOURCE_FILES
     ../visualmodel/OglLabel.cpp
     ../visualmodel/OglCylinderModel.cpp
     ../visualmodel/OglSceneFrame.cpp
+    ../visualmodel/OglGrid.cpp
 
     )
     
