new component OglLineAxis: display scene axis
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@10989 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/modules/sofa/component/SofaOpenglVisual/CMakeLists.txt
+++ b/Sofa/modules/sofa/component/SofaOpenglVisual/CMakeLists.txt
@@ -17,6 +17,7 @@ set(HEADER_FILES
     ../visualmodel/OglCylinderModel.h
     ../visualmodel/OglSceneFrame.h
     ../visualmodel/OglGrid.h
+    ../visualmodel/OglLineAxis.h
 
     )
     
@@ -37,6 +38,7 @@ set(SOURCE_FILES
     ../visualmodel/OglCylinderModel.cpp
     ../visualmodel/OglSceneFrame.cpp
     ../visualmodel/OglGrid.cpp
+    ../visualmodel/OglLineAxis.cpp
 
     )
     
