CGoGN : removed a useless dependence to SuiteSparse
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11030 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/extlibs/CGoGN/CMakeLists.txt
+++ b/Sofa/extlibs/CGoGN/CMakeLists.txt
@@ -106,16 +106,16 @@ SET (CGoGN_EXT_LIBS
 	${Boost_THREAD_LIBRARY}
 )
 
-IF(WIN32)
-	SET (CGoGN_EXT_INCLUDES ${CGoGN_EXT_INCLUDES} ${SOFA_EXTLIBS_DIR}/SuiteSparse/cholmod/Include)
-	file(GLOB WIN32SUITESPARSELIBS "${SOFA_EXTLIBS_DIR}/SuiteSparse/cholmod/Lib/*.dll")
-	SET (CGoGN_EXT_LIBS ${CGoGN_EXT_LIBS} 
-						${WIN32SUITESPARSELIBS})
-ELSE(WIN32)
-	find_package(SuiteSparse REQUIRED)
-	SET (CGoGN_EXT_INCLUDES ${CGoGN_EXT_INCLUDES} ${SUITESPARSE_INCLUDE_DIRS})
-	SET (CGoGN_EXT_LIBS ${CGoGN_EXT_LIBS} ${SUITESPARSE_LIBRARIES})
-ENDIF(WIN32)
+#IF(WIN32)
+#	SET (CGoGN_EXT_INCLUDES ${CGoGN_EXT_INCLUDES} ${SOFA_EXTLIBS_DIR}/SuiteSparse/cholmod/Include)
+#	file(GLOB WIN32SUITESPARSELIBS "${SOFA_EXTLIBS_DIR}/SuiteSparse/cholmod/Lib/*.dll")
+#	SET (CGoGN_EXT_LIBS ${CGoGN_EXT_LIBS} 
+#						${WIN32SUITESPARSELIBS})
+#ELSE(WIN32)
+#	find_package(SuiteSparse REQUIRED)
+#	SET (CGoGN_EXT_INCLUDES ${CGoGN_EXT_INCLUDES} ${SUITESPARSE_INCLUDE_DIRS})
+#	SET (CGoGN_EXT_LIBS ${CGoGN_EXT_LIBS} ${SUITESPARSE_LIBRARIES})
+#ENDIF(WIN32)
 
 
 IF(APPLE)
